fixed bug with hero padding causing horizontal scroll

--- a/app/app.scss
+++ b/app/app.scss
@@ -56,5 +56,5 @@ h1{
   width: 100%;
   margin: 0 auto;
   position: relative;
-  //overflow: hidden;
+  overflow-x: hidden;
 }
