--- a/app/components/main-screen/main-screen.scss
+++ b/app/components/main-screen/main-screen.scss
@@ -1,9 +1,8 @@
 #hero{
-  width: 100%;
   height: 240px;
   background: url("../../../img/1.jpg") center;
   background-size: cover;
-  padding: 5px 10px;
+  padding: 5px 0 0 7px;
 }
 
 #main{
